feat: add react-bablyon and story

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
+    "@babylonjs/core": "^4.1.0",
+    "@babylonjs/gui": "^4.1.0",
+    "@babylonjs/loaders": "^4.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -12,7 +15,9 @@
     "graphql": "^15.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-babylonjs": "^2.1.0-alpha.0",
     "react-dom": "^16.13.1",
+    "react-reconciler": "^0.25.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
